@@ -12,9 +12,9 @@
 
  x Add to website
 
- - Add the freshmeat.net
+ x Add the freshmeat.net
 
- - Announce on mailing list
+ x Announce on mailing list
 
  x Add to updates.txt
 
