@@ -799,3 +799,4 @@ Include the total backup time in the scheduled backup email.
 Added a script installer for RoundCube, a new IMAP webmail client with a nicer user interface than Squirrelmail.
 Added back the old one-file-per-domain backup format, which is more friendly to rsyncing the home directory separately.
 Moved the default quota for mailboxes to the 'Mail for domain' section of templates.
+Shell special characters like ; and & are no longer allowed in mailbox usernames.
